@@ -33,6 +33,7 @@ ext {
     set('springCloudVersion', "2025.0.0")
     jjwtVersion = '0.12.5'
     testcontainersVersion = '1.19.7'
+    lombokVersion = '1.18.38'
 }
 
 dependencies {
@@ -64,7 +65,6 @@ dependencies {
     // Utility Libraries
     implementation 'org.modelmapper:modelmapper:3.2.0'  // Added version
     compileOnly 'org.projectlombok:lombok'
-    implementation 'org.projectlombok:lombok'
 
     // Development
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -104,13 +104,6 @@ tasks.bootRun {
         '-XX:MaxDirectMemorySize=2g',
         '-XX:+FlightRecorder',
         '-XX:StartFlightRecording=duration=60s,filename=trading-profile.jfr'
-    ]
-}
-
-// Compiler arguments for Java 21 (ADDED)
-tasks.withType(JavaCompile) {
-    options.compilerArgs += [
-        '--add-modules', 'jdk.incubator.vector'
     ]
 }
 
